--- a/..Rcheck/powerHE/html/00Index.html
+++ b/..Rcheck/powerHE/html/00Index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head><title>R: The R 'power.he' Package</title>
+<head><title>R: The R 'powerHE' Package</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body><div class="container">
-<h1> The R 'power.he' Package
+<h1> The R 'powerHE' Package
 <img class="toplogo" src="../../../doc/html/Rlogo.svg" alt="[R logo]" />
 </h1>
 <hr/>
 <div style="text-align: center;">
 <a href="../../../doc/html/packages.html"><img class="arrow" src="../../../doc/html/left.jpg" alt="[Up]" /></a>
 <a href="../../../doc/html/index.html"><img class="arrow" src="../../../doc/html/up.jpg" alt="[Top]" /></a>
-</div><h2>Documentation for package &lsquo;power.he&rsquo; version 0.1.0</h2>
+</div><h2>Documentation for package &lsquo;powerHE&rsquo; version 0.1.0</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 </ul>
@@ -22,8 +22,8 @@
 
 <table style="width: 100%;">
 <tr><td style="width: 25%;"><a href="format.html">format</a></td>
-<td>Format HIE Results</td></tr>
-<tr><td style="width: 25%;"><a href="hie.html">hie</a></td>
+<td>Format HE Results</td></tr>
+<tr><td style="width: 25%;"><a href="HE.html">HE</a></td>
 <td>Hierarchical Endpoints</td></tr>
 </table>
 </div></body></html>
