--- a/..Rcheck/powerHE/html/00Index.html
+++ b/..Rcheck/powerHE/html/00Index.html
@@ -21,9 +21,9 @@
 
 
 <table style="width: 100%;">
-<tr><td style="width: 25%;"><a href="format.html">format</a></td>
-<td>Format HE Results</td></tr>
-<tr><td style="width: 25%;"><a href="HE.html">HE</a></td>
+<tr><td style="width: 25%;"><a href="formatHE.html">formatHE</a></td>
+<td>Format powerHE Results</td></tr>
+<tr><td style="width: 25%;"><a href="powerHE.html">powerHE</a></td>
 <td>Hierarchical Endpoints</td></tr>
 </table>
 </div></body></html>
